--- a/scss/base/_responsiveness.scss
+++ b/scss/base/_responsiveness.scss
@@ -70,7 +70,7 @@
         "menu go-top"
         "menu pay-paypal"
         "menu contact-footer";
-        grid-template-columns: repeat(2,fr);
+        grid-template-columns: 50% 50%;
         grid-template-rows: auto auto auto;
     }
 
